--- a/estilo.css
+++ b/estilo.css
@@ -261,21 +261,6 @@ th, td {
 
 
 .tecnologias{
-  color: white;
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.caixa1{
-  font-size: 21px;
-  margin: 1%;
-  width: 45%;
-  padding: 20px;
-  background-color: rgba(255, 255, 255, 0.336);
-}
-
-.tecnologias{
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -314,6 +299,7 @@ th, td {
   position: relative;
   perspective: 1000px;
   backface-visibility: hidden;
+  transition: transform 0.5s ease;
   box-shadow: 0px 0px 14px 6px rgb(255, 255, 255);
 
 
@@ -328,10 +314,12 @@ th, td {
   backface-visibility: hidden;
   text-align: center;
   color: white;
+  transition: transform 0.5s ease;
 }
 
 .conteudo1, .conteudo2, .conteudo3 {
   z-index: 1;
+  transform: rotateY(0deg);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -341,6 +329,8 @@ th, td {
 
 .conteudo-novo1, .conteudo-novo2,.conteudo-novo3 {
   z-index: 0;
+  transform: rotateY(-180deg);
+
   display: flex;
   align-items: center;
   justify-content: center;
